--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="icon" type="image/png" href="./memories.png">
+    <meta name="description" content="A website created using Create React App" />
+    <link rel="icon" href="./memories.png" type="image/png" />
     <title>Memories</title>
   </head>
   <body>
